<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <android.support.design.widget.TextInputLayout
        android:id="@+id/til_street_main"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/entry_item_vertical_spacing"
        android:layout_marginTop="@dimen/entry_item_vertical_spacing">

        <EditText
            android:id="@+id/et_street_main"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/street"
            android:inputType="text" />
    </android.support.design.widget.TextInputLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <android.support.design.widget.TextInputLayout
            android:id="@+id/til_street_sub"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="3"
            android:layout_marginBottom="@dimen/entry_item_vertical_spacing"
            android:layout_marginTop="@dimen/entry_item_vertical_spacing">

            <EditText
                android:id="@+id/et_street_sub"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/street"
                android:inputType="text" />
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/til_unit"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_marginBottom="@dimen/entry_item_vertical_spacing"
            android:layout_marginTop="@dimen/entry_item_vertical_spacing">

            <EditText
                android:id="@+id/et_unit"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/unit"
                android:inputType="phone" />
        </android.support.design.widget.TextInputLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <android.support.design.widget.TextInputLayout
            android:id="@+id/til_city"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="3"
            android:layout_marginBottom="@dimen/entry_item_vertical_spacing"
            android:layout_marginTop="@dimen/entry_item_vertical_spacing">

            <EditText
                android:id="@+id/et_city"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/city"
                android:inputType="textEmailAddress" />
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/til_state"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/entry_item_vertical_spacing"
            android:layout_marginTop="@dimen/entry_item_vertical_spacing">

            <EditText
                android:id="@+id/et_state"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/state"
                android:inputType="textEmailAddress" />
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/til_zip"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:layout_marginBottom="@dimen/entry_item_vertical_spacing"
            android:layout_marginTop="@dimen/entry_item_vertical_spacing">

            <EditText
                android:id="@+id/et_zip"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/zip"
                android:inputType="textEmailAddress" />
        </android.support.design.widget.TextInputLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <android.support.design.widget.TextInputLayout
            android:id="@+id/til_county"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"

            android:layout_marginBottom="@dimen/entry_item_vertical_spacing"
            android:layout_marginTop="@dimen/entry_item_vertical_spacing">

            <EditText
                android:id="@+id/et_county"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/county"
                android:inputType="textEmailAddress" />
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/til_country"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_marginBottom="@dimen/entry_item_vertical_spacing"
            android:layout_marginTop="@dimen/entry_item_vertical_spacing">

            <EditText
                android:id="@+id/et_country"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/country"
                android:inputType="textEmailAddress" />
        </android.support.design.widget.TextInputLayout>
    </LinearLayout>
</LinearLayout>